# CodeLib

AutoAim_VREP/: CMakeLists.txt  armorDetector.cpp  armorDetector.h  control.h  main.cpp
AutoAim_VREP/CoppeliaSim/: CMakeLists.txt  CoppeliaSim.h
AutoAim_VREP/ProcessBox/: CMakeLists.txt  ProcessBox.cpp  ProcessBox.h
AutoAim_VREP/config/: mypara.xml
AutoAim_VREP/para/: CMakeLists.txt  Parameter.cpp  Parameter.h
AutoAim_VREP/thread/inc/: cameraThread.h  serialPortReadThread.h  serialPortWriteThread.h
AutoAim_VREP/thread/src/: cameraThread.cpp  serialPortReadThread.cpp  serialPortWriteThread.cpp  thread.cpp
camera/: CMakeLists.txt  package.xml
camera/src/: IRCamera.cpp  IRCamera.h  define.h  main.cpp
src/: Converter.cpp  Converter.h  define.h  main.cpp
src/Para/: CMakeLists.txt  Parameter.cpp  Parameter.h
src/ProcessBox/: CMakeLists.txt  ProcessBox.cpp  ProcessBox.h
src/yolo/: CMakeLists.txt  class_timer.hpp  class_yolo_detector.hpp  yoloplugin_lib.cpp
